@@ -1,3 +1,9 @@
+2005-10-11  Tom Tromey  <tromey@redhat.com>
+
+	* lower.cc (handle_convert): Use convert_to_integer.
+	* tree.cc (visit_cast): Handle float->integral conversions
+	properly.
+
 2005-10-10  Ranjit Mathew  <rmathew@gcc.gnu.org>
 
 	* tree.hh (tree_generator): Remove visit_element() and add dummy
